loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:30: error: not found: value isGroundWhite
if (isGroundWhite()){
    ^